# harmony-ai-framework

./: .gitignore  .npmignore  .npmrc  AGENTS.md  CHANGELOG.md  INSTRUCTIONS.md  LICENSE  README.md  SECURITY.md  checksums.sha256  harmony.manifest.json  package.json
agents/: INDEX.md  accessibility.md  ai-architect.md  analyst-mini.md  analyst.md  architect.md  atlas.md  backlog.md  database.md  designer.md  developer-quickwin.md  developer.md  exploratory-qa.md  guardian.md  harmony.md  narrative-designer.md  party.md  pentest.md  product-manager.md  quick-flow-solo.md  quick-flow.md  review.md  rgpd.md  scrum-master.md  security.md  sentinel.md  supervisor.md  tech-writer.md  tester.md  ucv-qa.md  ucv-validator.md  ucv-writer.md  ucv.md  ux-designer.md
commands/: agents.yaml  claude.md  config.md  costs.md  coverage.md  diagrams.yaml  duplicates.md  export.md  fix.md  full.md  go.md  harmony.md  hf-agent-accessibility.md  hf-agent-ai-architect.md  hf-agent-analyst-mini.md  hf-agent-analyst.md  hf-agent-architect.md  hf-agent-atlas.md  hf-agent-backlog.md  hf-agent-brainstorm.md  hf-agent-database.md  hf-agent-dependency.md  hf-agent-design-thinking.md  hf-agent-designer.md  hf-agent-dev-quickwin.md  hf-agent-dev.md  hf-agent-devops-builder.md  hf-agent-devops.md  hf-agent-docs.md  hf-agent-exploratory-qa.md  hf-agent-game-architect.md  hf-agent-game-designer.md  hf-agent-game-developer.md  (+87 more)
tools/prompt-monitor/: README.md  prompt-monitor.sh  pyproject.toml  requirements.txt  settings-addon.json
tools/prompt-monitor/harmony_monitor/: __init__.py  analyzer.py  api.py  claude_session.py  cli.py  db.py  models.py  server.py
tools/prompt-monitor/harmony_monitor/static/: app.js  index.html  style.css
tools/prompt-monitor/hooks/: track-interaction.sh  track-user-prompt.sh
(+823 files in other folders)
