[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harmony-prompt-monitor"
version = "0.1.0"
description = "MCP Server for monitoring and analyzing prompt effectiveness"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Harmony Framework", email = "harmony@example.com" }
]
keywords = ["mcp", "llm", "monitoring", "prompts", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.26.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
harmony-monitor = "harmony_monitor.cli:main"

[project.urls]
Homepage = "https://github.com/harmony-framework/harmony-prompt-monitor"
Documentation = "https://github.com/harmony-framework/harmony-prompt-monitor#readme"
Repository = "https://github.com/harmony-framework/harmony-prompt-monitor"

[tool.hatch.build.targets.wheel]
packages = ["harmony_monitor"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
